# about-this-mac

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  about-this-mac.py  changelog.md  justfile  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml  codeql.yml  ports.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
19/90a4e70b18/: metadata.json
19/90a4e70b18/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
2d/c69c479842/: metadata.json
2d/c69c479842/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
2e/aba747c7c8/: metadata.json
2e/aba747c7c8/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
3b/c491e3fcb0/: metadata.json
3b/c491e3fcb0/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
7c/f452398414/: metadata.json
7c/f452398414/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
docs/: refactoring-walkthrough.md
go/: go.mod
go/cmd/about-this-mac/: main.go
go/internal/execx/: execx.go
go/internal/format/: simple.go  simple_test.go
go/internal/hw/: hw.go  hw_test.go
rust/: Cargo.toml
rust/src/: execx.rs  format.rs  hw.rs  main.rs
rust/tests/: simple_format.rs
scripts/: capture-fixtures.sh
specs/001-mac-info-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mac-info-cli/checklists/: requirements.md
specs/001-mac-info-cli/contracts/: cli-contract.md
src/about_this_mac/: __init__.py  __main__.py  cli.py  output.py
src/about_this_mac/battery/: __init__.py  battery_info.py
src/about_this_mac/commands/: __init__.py  raw.py  report.py
src/about_this_mac/hardware/: __init__.py  hardware_info.py
src/about_this_mac/utils/: __init__.py  command.py  formatting.py  system.py
tests/: __init__.py  conftest.py  test_battery_info.py  test_cli.py  test_hardware_info.py  test_output.py
tests/commands/: test_raw.py  test_report.py
tests/utils/: test_command.py  test_formatting.py  test_system.py
