[project]
name = "about-this-mac"
version = "0.1.1"
description = "A lightweight CLI tool to gather detailed information about your Mac"
authors = [
    { name = "about-this-mac contributors" }
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "pylint>=2.17.5",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/about_this_mac --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
