[package]
name = "about-this-mac"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "about-this-mac"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
